# Access-Auditor

./: .dockerignore  Dockerfile  Nginx reverse proxy (TLS + basic auth + rate-limit)  README.md  _audit_one_async  app.py  docker-compose.yml  pyproject.toml  render.yaml  report.py  requirements.txt  scanner_pdf.py  scanner_web.py  utils.py
.streamlit/: Dockerfile  config.toml
docs/: acr.html  index.html  privacy.html  security.html  style.css  terms.html
ops/: backup-crontab  backup.sh  nginx.conf
