[tool.poetry]
name = "access-auditor"
version = "0.1.0"
description = "Automated WCAG accessibility pre-check for councils"
authors = ["Abdullah <abdurag77@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37"
pandas = "^2.2"
beautifulsoup4 = "^4.12"
requests = "^2.32"
httpx = "^0.27"   # async, fast batch fetches

[tool.poetry.group.dev.dependencies]
black = "^24.10"
ruff = "^0.6"
pytest = "^8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
