[tool.poetry]
name = "access-auditor"
version = "0.1.0"
description = "Lightweight WCAG pre-check (Streamlit app) for council websites"
authors = ["Abdullah <abdurag77@gmail.com>"]
readme = "README.md"
packages = [{ include = "app.py" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = "^1.33"         # 1.33+ is fine; avoid very old versions
requests = "^2.31"
beautifulsoup4 = "^4.12"
pandas = "^2.2"
httpx = "^0.27"             # HTTP/1.1 only in app.py (http2=False)
urllib3 = "^2.2"

# Optional: if you plan to export to Excel in the future
# openpyxl = "^3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3"
ruff = "^0.4"
pytest = "^8.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
